; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_opt.c_ZSTD_compressBlock_btultra.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_opt.c_ZSTD_compressBlock_btultra.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i64, i64, %struct.TYPE_13__, %struct.TYPE_10__ }
%struct.TYPE_13__ = type { i64 }
%struct.TYPE_10__ = type { i64, i64, i64 }
%struct.TYPE_11__ = type { i64, i64 }

@ZSTD_REP_NUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"ZSTD_compressBlock_btultra (srcSize=%zu)\00", align 1
@ZSTD_noDict = common dso_local global i32 0, align 4
@ZSTD_BLOCKSIZE_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_compressBlock_btultra(%struct.TYPE_12__* %0, %struct.TYPE_11__* %1, i64* %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.TYPE_12__*, align 8
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %6, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %7, align 8
  store i64* %2, i64** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load i32, i32* @ZSTD_REP_NUM, align 4
  %12 = zext i32 %11 to i64
  %13 = load i64, i64* %10, align 8
  %14 = call i32 (i32, i8*, ...) @DEBUGLOG(i32 5, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i64 %13)
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %6, align 8
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %17 = load i64*, i64** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i32, i32* @ZSTD_noDict, align 4
  %21 = call i64 @ZSTD_compressBlock_opt_generic(%struct.TYPE_12__* %15, %struct.TYPE_11__* %16, i64* %17, i8* %18, i64 %19, i32 2, i32 %20)
  ret i64 %21
}

declare dso_local i32 @DEBUGLOG(i32, i8*, ...) #1

declare dso_local i64 @ZSTD_compressBlock_opt_generic(%struct.TYPE_12__*, %struct.TYPE_11__*, i64*, i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
